added markers, popups, centering

--- a/style.css
+++ b/style.css
@@ -7,17 +7,18 @@ body {
   width: 100%;
   height: 768px;
 }
-#header{
+#header {
   position: relative;
   height: 60px;
   width: 100%;
 }
-#map{
+#map {
   position: relative;
   height: 90%;
   width: 100%;
+  left: -5px;
 }
-#logo{
+#logo {
   position: absolute;
   /*border-width: 1px;
   border-style: solid;
@@ -25,9 +26,9 @@ body {
   height: 35px;
   width: 35px;
   left: 17px;
-  top:10px;
+  top: 10px;
 }
-#bars{
+#bars {
   position: absolute;
   /*border-width: 1px;
   border-style: solid;
@@ -37,7 +38,7 @@ body {
   top: 10px;
   left: 467px;
 }
-#lines{
+#lines {
   position: absolute;
   /*border-width: 1px;
   border-style: solid;
@@ -47,7 +48,7 @@ body {
   top: 10px;
   left: 523px;
 }
-#globe{
+#globe {
   position: absolute;
   background-image: url("http://www2.psd100.com/ppp/2013/10/0401/globe-icon-1004130929.png");
   background-size: cover;
@@ -58,4 +59,14 @@ body {
   width: 25px;
   top: 15px;
   left: 575px;
+}
+.mapboxgl-popup-content {
+  position: absolute;
+  left: -10px;
+  top: 10px;
+  min-height: 150px;
+  max-height: 450px;
+  min-width: 125px;
+  max-width: 300px;
+  overflow: scroll;
 }
